fix syntax errors in `kon` notebook

--- a/Analysis/(LUMICKS) Effective kon from a kymograph/kon.ipynb
+++ b/Analysis/(LUMICKS) Effective kon from a kymograph/kon.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "092a001c",
+   "id": "5cd4b252",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,26 +17,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c917797",
+   "id": "690e950b",
    "metadata": {},
    "source": [
     "# Rate of binding\n",
     "\n",
-    "[Download this page as a Jupyter notebook](https://lumicks-pylake.readthedocs.io/en/latest/_downloads/c7c1f3e55f7638ee27b80da58cd35f0f/kon.ipynb)\n",
+    "[Download this page as a Jupyter notebook](https://lumicks-pylake.readthedocs.io/en/stable/_downloads/fe0829c0770260fc2119bac347b95711/kon.ipynb)\n",
     "\n",
     "## Determine the rate of binding\n",
     "\n",
-    "In this Notebook, we will determine the binding time of a fluorescently labeled protein binding to DNA. The protein binds and unbinds to target sites on DNA and the result is recorded as a kymograph. We track the binding events, and then determine the time intervals between the binding events:\n",
+    "In this Notebook, we will determine the time between binding events for a fluorescently labeled protein binding to DNA. The protein binds and unbinds to target sites on DNA and the result is recorded as a kymograph. We track the binding events, and then determine the time intervals between the binding events:\n",
     "\n",
     "These time intervals tell you how long it takes for a protein to bind to an empy target site.\n",
     "\n",
-    "The binding time, $\\tau_{on}$ relates to the on rate of protein, $k_{on}$, as $\\tau_{on}=1/ (k_{on}[P])$ . The binding rate $k_{on}$ relates to the dissociation constant as.\n",
+    "The time between binding events, $\\tau_{on}$ relates to the on rate of protein, $k_{on}$, as $\\tau_{on}=1/ (k_{on}[P])$ . The binding rate $k_{on}$ relates to the dissociation constant as.\n",
     "\n",
     "$$\n",
-    "K_{off} = \\frac{k_{off}}{k_{on}}\n",
+    "K_{D} = \\frac{k_{off}}{k_{on}}\n",
     "$$\n",
     "\n",
-    "For this example, we don’t know the protein concentration and can therefore not determine $k_{on}$ . We will determine the binding time and refer to the inverse of the binding time, as the effective binding rate, $k'_{on} = k_{on}[P]$ . Further, we assume that the bleaching time for the dye is much longer than the binding time, such that we can ignore the effect of bleaching.\n",
+    "For this example, we don’t know the protein concentration and can therefore not determine $k_{on}$ . We will determine the time between binding events and refer to the inverse of that, as the effective binding rate, $k'_{on} = k_{on}[P]$ . Further, we assume that the bleaching time for the dye is much longer than the time between binding, such that we can ignore the effect of bleaching.\n",
     "\n",
     "## Load and plot the kymographs\n",
     "\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "392af8f7",
+   "id": "2b24884b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90a4050d",
+   "id": "f79ccea7",
    "metadata": {},
    "source": [
     "Load and plot the kymograph:"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77968da2",
+   "id": "d02a8e43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c00cae89",
+   "id": "dc0081dc",
    "metadata": {},
    "source": [
     "## Load the tracks\n",
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91d7b3dc",
+   "id": "abc8f69a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,12 +97,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "067e4625",
+   "id": "fbedc552",
    "metadata": {},
    "source": [
-    "Note that the kymograph passed to `lk.load_tracks` is cropped, because tracking was performed on a cropped kymograph, see [Track the binding events](https://lumicks-pylake.readthedocs.io/en/latest/examples/kon/../binding_lifetime/binding_lifetime.html#tracking).\n",
+    "Note that the kymograph passed to `lk.load_tracks` is cropped, because tracking was performed on a cropped kymograph, see [Track the binding events](https://lumicks-pylake.readthedocs.io/en/stable/examples/kon/../binding_lifetime/binding_lifetime.html#tracking).\n",
     "\n",
-    "Use the same approach as above to load the tracks exported from Lakeview, except that the part [`Kymo.crop_by_distance()`](https://lumicks-pylake.readthedocs.io/en/latest/examples/kon/../../_api/lumicks.pylake.kymo.Kymo.html#lumicks.pylake.kymo.Kymo.crop_by_distance) has to be removed.\n",
+    "Use the same approach as above to load the tracks exported from Lakeview, except that the part [`Kymo.crop_by_distance()`](https://lumicks-pylake.readthedocs.io/en/stable/examples/kon/../../_api/lumicks.pylake.kymo.Kymo.html#lumicks.pylake.kymo.Kymo.crop_by_distance) has to be removed.\n",
     "\n",
     "## Select target location\n",
     "\n",
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24151d31",
+   "id": "edc6fb24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66990a27",
+   "id": "0828bfb2",
    "metadata": {},
    "source": [
     "Next, select the coordinates of the target binding site, for which you would like to determine the on-rate. Often, the location of a target site is identified using, for example, fluorescent markers. On this kymograph, all binding events were on a target sequence. So we can select the target locations manually.\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "539c9b09",
+   "id": "53724952",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc2bc514",
+   "id": "00e3a0c3",
    "metadata": {},
    "source": [
     "Select all tracks that are on average within the two coordinates indicated in the above image:"
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0abc2960",
+   "id": "de8db821",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df17bae2",
+   "id": "5286fdb9",
    "metadata": {},
    "source": [
     "Plot the final selection of tracks:"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17a6e70b",
+   "id": "eaf19f2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83055b4f",
+   "id": "d8f7f37d",
    "metadata": {},
    "source": [
     "Since we are using a repeat sequence and all observed binding events were on-target, we select multiple regions on the same kymograph:"
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c13345f",
+   "id": "9ca9da83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90ec22a8",
+   "id": "391c6574",
    "metadata": {},
    "source": [
     "Below, we use the above coordinates to select the corresponding region from the kymograph. We check that non of the events overlap in time (as we cannot compute kon for overlapping events) and proceed to compute the time intervals between events:"
@@ -210,16 +210,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2537f73e",
+   "id": "29fab3f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_any_overlap(tracks):\n",
-    "# Iterate over tracked binding events to check for overlap\n",
-    "for i in range(len(tracks)):\n",
-    "    for j in range(i + 1, len(tracks)):\n",
-    "        if check_range_overlap(tracks[i], tracks[j]):\n",
-    "            raise Exception(\"Two or more binding events overlap in time! Remove the overlapping events before continuing the analysis.\")\n",
+    "    # Iterate over tracked binding events to check for overlap\n",
+    "    for i in range(len(tracks)):\n",
+    "        for j in range(i + 1, len(tracks)):\n",
+    "            if check_range_overlap(tracks[i], tracks[j]):\n",
+    "                raise Exception(\"Two or more binding events overlap in time! Remove the overlapping events before continuing the analysis.\")\n",
     "\n",
     "def check_range_overlap(track1, track2):\n",
     "    # Find the minimum and maximum values in each array\n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e82614e7",
+   "id": "d8a6faea",
    "metadata": {},
    "source": [
     "All the time intervals between binding events are stored in the list `intervals_total`. Check how many intervals we have in total:"
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf3db919",
+   "id": "50aad3e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,12 +267,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07129ffb",
+   "id": "bfe2cfc0",
    "metadata": {},
    "source": [
     "## Determine kon\n",
     "\n",
-    "Binding times are typically exponentially distributed. The distribution can be expressed in terms of the effective on-rate, $k'_{on}$, or in terms of the binding lifetime, $\\tau_{on}$:\n",
+    "The time intervals between binding are typically exponentially distributed. The distribution can be expressed in terms of the effective on-rate, $k'_{on}$, or in terms of the binding lifetime, $\\tau_{on}$:\n",
     "\n",
     "$$\n",
     "P(t) = k'_{on}e^{-k'_{on}t} = \\frac{1}{\\tau_{on}} e^{-t/\\tau_{on}}\n",
@@ -284,11 +284,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "741d8a6f",
+   "id": "a41213d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "single_exponential_fit = lk.DwelltimeModel(np.array(intervals_total), n_components=1, , discretization_timestep = kymo1.line_time_seconds, min_observation_time = kymo1.line_time_seconds)\n",
+    "single_exponential_fit = lk.DwelltimeModel(np.array(intervals_total), n_components=1, discretization_timestep=kymo1.line_time_seconds, min_observation_time=kymo1.line_time_seconds)\n",
     "\n",
     "plt.figure()\n",
     "single_exponential_fit.hist()\n",
@@ -297,10 +297,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0d3fcba",
+   "id": "fd3c3469",
    "metadata": {},
    "source": [
-    "The fitted binding time is 35 seconds, which is equivalent to an effective rate $k'_{on} = 1/35 = 0.029 s^{-1}$.\n",
+    "The fitted average time between binding events is 35 seconds, corresponding to an effective rate $k'_{on} = 1/35 = 0.029 s^{-1}$.\n",
     "\n",
     "The confidence intervals can be determined using Bootstrapping:"
    ]
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93a4e115",
+   "id": "d6673eca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,14 +321,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ed903a6",
+   "id": "ad5d0940",
    "metadata": {},
    "source": [
     "## Conclusion and Outlook\n",
     "\n",
-    "The binding time is 35 seconds with a 95% confidence interval of (24,50).\n",
+    "The average time between binding events is 35 seconds with a 95% confidence interval of (24,50).\n",
     "\n",
-    "As mentioned in the introduction, the obtained binding time depends on the protein concentration. Since we don’t know the protein concentration, this value can only be compared to measurements with the same protein concentration in the flow cell. If you would like to compute the dissociation constant and compare to bulk experiments, the concentration has to be determined 1.\n",
+    "As mentioned in the introduction, the obtained time depends on the protein concentration. Since we don’t know the protein concentration, this value can only be compared to measurements with the same protein concentration in the flow cell. If you would like to compute the dissociation constant and compare to bulk experiments, the concentration has to be determined 1.\n",
     "\n",
     "1Schaich et al, Single-molecule analysis of DNA-binding proteins from nuclear extracts (SMADNE), NAR (2023)"
    ]
